--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <title></title>
+    <title>Colmar Academy</title>
   </head>
   <body>
+
+    <header>
+      <div class="image_container" id="colmar_logo">
+      <img src="./resources/images/ic-logo.svg">
+      <span id="logo_name">Colmar Academy
+      </span>
+      </div>
+
+    </header>
 
   </body>
 </html>
