--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./resources/css/reset.css">
-    <link rel="stylesheet" href="./resources/css/style.css">
-    <title>Colmar Academy</title>
-  </head>
-  <body>
 
-    <header>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./resources/css/reset.css">
+  <link rel="stylesheet" href="./resources/css/style.css">
+  <title>Colmar Academy</title>
+</head>
+
+<body>
+
+  <header>
+
+    <div class="logo">
       <div class="image_container" id="colmar_logo">
-      <img src="./resources/images/ic-logo.svg">
-      <span id="logo_name">Colmar Academy
+        <img src="./resources/images/ic-logo.svg">
+        <span id="logo_name"><strong>Colmar</strong>Academy
       </span>
       </div>
+    </div>
 
-    </header>
+    <nav>
+      <span><a href="#campus">On Campus</a></span>
+      <span><a href="#online">Online</a></span>
+      <span><a href="#companies">For companies</a></span>
+      <span><a href="#">Sign in</a></span>
+    </nav>
 
-  </body>
+  </header>
+
+</body>
+
 </html>
