--- a/index.html
+++ b/index.html
@@ -15,19 +15,51 @@
     <div class="logo">
       <div class="image_container" id="colmar_logo">
         <img src="./resources/images/ic-logo.svg">
-        <span id="logo_name"><strong>Colmar</strong>Academy
-      </span>
       </div>
+      <span id="logo_name"><strong>COLMAR</strong>ACADEMY
+      </span>
     </div>
 
     <nav>
       <span><a href="#campus">On Campus</a></span>
-      <span><a href="#online">Online</a></span>
-      <span><a href="#companies">For companies</a></span>
+      <span><a href="./online.html">Online</a></span>
+      <span><a href="./for_companies.html">For companies</a></span>
       <span><a href="#">Sign in</a></span>
+
+      <!--
+
+Need to add drop-down for sign-in
+
+-->
+
     </nav>
 
   </header>
+
+  <section class="jumbotron">
+
+    <div class="content">
+
+      <div class="image_container">
+        <img src="./resources/images/banner.jpg">
+      </div>
+
+      <div class="right_side">
+        <div class="text">
+          <h1>Learn something new everyday</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="button">Start here
+        </div>
+      </div>
+
+    </div>
+
+
+  </section>
+
+  <section id="campus">
+  </section>
 
 </body>
 
