--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Need to add drop-down for sign-in
 
   </header>
 
-  <section class="jumbotron">
+  <section class="jumbotron grey-background">
 
     <div class="content">
 
@@ -45,12 +45,15 @@ Need to add drop-down for sign-in
       </div>
 
       <div class="right_side">
+
         <div class="text">
           <h1>Learn something new everyday</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
+
         <div class="button">Start here
         </div>
+
       </div>
 
     </div>
@@ -59,6 +62,61 @@ Need to add drop-down for sign-in
   </section>
 
   <section id="campus">
+    <div class="content wide">
+
+      <div class="left_side">
+
+        <div class="image_container">
+          <img src="./Resources/images/information-main.jpg"> </div>
+        <h1>It doesn't hurt to keep practicing</h1>
+        <p class="quote">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+        <p>Emanuel, Sr. Strategist at Hiring.com</p>
+
+      </div>
+
+      <div class="right_side">
+
+        <div class="event">
+          <div class="image_container">
+            <img src="./Resources/images/information-orientation.jpg">
+          </div>
+          <div class="text">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <p class="read_more">Read more</p>
+          </div>
+        </div>
+
+        <div class="event">
+          <div class="image_container">
+            <img src="./Resources/images/information-campus.jpg">
+          </div>
+          <div class="text">
+            <h3>Our campus</h3>
+            <p>Find which campus is close by you</p>
+            <p class="read_more">Read more</p>
+          </div>
+        </div>
+
+        <div class="event grey-background">
+          <div class="image_container">
+            <img src="./Resources/images/information-guest-lecture.jpg">
+          </div>
+          <div class="text">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sacks about music in medical treatment</p>
+            <p class="read_more">Read more</p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <section class="grey-background" id="classes">
+    asdf
   </section>
 
 </body>
