--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
+
   <title>Colmar Academy</title>
 </head>
 
@@ -83,7 +84,7 @@ Need to add drop-down for sign-in
           <div class="text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p class="read_more">Read more</p>
+            <p class="read_more"><a href="./read_more.html">Read more</a></p>
           </div>
         </div>
 
@@ -94,7 +95,7 @@ Need to add drop-down for sign-in
           <div class="text">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
-            <p class="read_more">Read more</p>
+            <p class="read_more"><a href="./read_more.html">Read more</a></p>
           </div>
         </div>
 
@@ -105,7 +106,7 @@ Need to add drop-down for sign-in
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sacks about music in medical treatment</p>
-            <p class="read_more">Read more</p>
+            <p class="read_more"><a href="./read_more.html">Read more</a></p>
           </div>
         </div>
 
@@ -116,8 +117,109 @@ Need to add drop-down for sign-in
   </section>
 
   <section class="grey-background" id="classes">
-    asdf
+    <h1 class="center">Start learning</h1>
+
+    <div class="content">
+
+      <div class="subject_container">
+
+        <div class="image_container">
+          <img src="./Resources/images/course-software.jpg">
+        </div>
+
+        <div class="text">
+          <h3>Software engineering</h3>
+          <h4>COURSES</h4>
+          <p>Web Development, Mobile Development, IOT, APIs</p>
+        </div>
+
+      </div>
+
+      <div class="subject_container">
+
+        <div class="image_container">
+          <img src="./Resources/images/course-computer-art.jpg">
+        </div>
+
+        <div class="text">
+          <h3>Computer Art</h3>
+          <h4>COURSES</h4>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+
+      </div>
+
+      <div class="subject_container">
+
+        <div class="image_container">
+          <img src="./Resources/images/course-design.jpg">
+        </div>
+
+        <div class="text">
+          <h3>Design</h3>
+          <h4>COURSES</h4>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+
+      </div>
+
+      <div class="subject_container">
+
+        <div class="image_container">
+          <img src="./Resources/images/course-data.jpg">
+        </div>
+
+        <div class="text">
+          <h3>Data</h3>
+          <h4>COURSES</h4>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+
+      </div>
+
+      <div class="subject_container">
+
+        <div class="image_container">
+          <img src="./Resources/images/course-business.jpg">
+        </div>
+
+        <div class="text">
+          <h3>Business</h3>
+          <h4>COURSES</h4>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+
+      </div>
+
+      <div class="subject_container">
+
+        <div class="image_container">
+          <img src="./Resources/images/course-marketing.jpg">
+        </div>
+
+        <div class="text">
+          <h3>Marketing</h3>
+          <h4>COURSES</h4>
+          <p>Analytics, Content Marketiong, Mobile Marketing</p>
+        </div>
+
+      </div>
+
+
+    </div>
+
   </section>
+
+  <section class="thesis">
+    <h1 class="center">Thesis exhibit</h1>
+    <div class="left_side">
+      <div class="image_container">
+      </div>
+    </div>
+    <div class="right_side">
+
+  </section>
+
 
 </body>
 
