Finished Thesis and Footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,700|Open+Sans:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
 
@@ -40,7 +41,7 @@ Need to add drop-down for sign-in
   <section class="jumbotron grey-background">
 
     <div class="content">
-
+      
       <div class="image_container">
         <img src="./resources/images/banner.jpg">
       </div>
@@ -70,7 +71,7 @@ Need to add drop-down for sign-in
         <div class="image_container">
           <img src="./Resources/images/information-main.jpg"> </div>
         <h1>It doesn't hurt to keep practicing</h1>
-        <p class="quote">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+        <p class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec lacus ac nisl pulvinar dignissim at condimentum ipsum. Proin viverra aliquam lectus. Suspendisse ligula est, lacinia vel tempor ac, tincidunt lobortis nibh."</p>
         <p>Emanuel, Sr. Strategist at Hiring.com</p>
 
       </div>
@@ -211,14 +212,59 @@ Need to add drop-down for sign-in
   </section>
 
   <section class="thesis">
+
     <h1 class="center">Thesis exhibit</h1>
-    <div class="left_side">
-      <div class="image_container">
+
+    <div class="content">
+      <div class="left_side">
+        <div class="image_container">
+          <video controls>
+          <source src="./resources/videos/thesis.mp4">
+        </video>
+        </div>
+        <div class="text">
+          <h3>Reimagine urban</h3>
+          <p class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec lacus ac nisl pulvinar dignissim at condimentum ipsum. Proin viverra aliquam lectus. Suspendisse ligula est, lacinia vel tempor ac, tincidunt lobortis nibh."</p>
+
+        </div>
+      </div>
+      <div class="right_side">
+
+        <div class="event grey-background">
+          <div class="image_container">
+            <img src="./Resources/images/thesis-fisma.jpg">
+          </div>
+          <div class="text">
+            <h3>Fisma: Design and Prototype </h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+
+
+        <div class="event">
+          <div class="image_container">
+            <img src="./Resources/images/thesis-now-and-then.jpg">
+          </div>
+          <div class="text">
+            <h3>Now and then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+
       </div>
     </div>
-    <div class="right_side">
 
   </section>
+
+  <footer>
+    <div>
+      <span>©2016 Colmar Academy. All rights reserved</span>
+    </div>
+    <div>
+      <span>Terms</span>
+      <span>Privacy</span>
+    </div>
+  </footer>
 
 
 </body>
