--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@ Need to add drop-down for sign-in
   <section class="jumbotron grey-background">
 
     <div class="content">
-      
-      <div class="image_container">
-        <img src="./resources/images/banner.jpg">
+      <div class="left_side">
+        <div class="image_container">
+          <img src="./resources/images/banner.jpg">
+        </div>
       </div>
 
       <div class="right_side">
@@ -66,10 +67,11 @@ Need to add drop-down for sign-in
   <section id="campus">
     <div class="content wide">
 
-      <div class="left_side">
+      <div class="left_side mobile_hide">
 
         <div class="image_container">
-          <img src="./Resources/images/information-main.jpg"> </div>
+          <img src="./Resources/images/information-main.jpg">
+         </div>
         <h1>It doesn't hurt to keep practicing</h1>
         <p class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec lacus ac nisl pulvinar dignissim at condimentum ipsum. Proin viverra aliquam lectus. Suspendisse ligula est, lacinia vel tempor ac, tincidunt lobortis nibh."</p>
         <p>Emanuel, Sr. Strategist at Hiring.com</p>
@@ -79,8 +81,11 @@ Need to add drop-down for sign-in
       <div class="right_side">
 
         <div class="event">
-          <div class="image_container">
+          <div class="image_container mobile_hide">
             <img src="./Resources/images/information-orientation.jpg">
+          </div>
+          <div class="image_container mobile">
+            <img src="./Resources/images/information-orientation-mobile.jpg">
           </div>
           <div class="text">
             <h3>Orientation date</h3>
@@ -90,8 +95,11 @@ Need to add drop-down for sign-in
         </div>
 
         <div class="event">
-          <div class="image_container">
+          <div class="image_container mobile_hide">
             <img src="./Resources/images/information-campus.jpg">
+          </div>
+          <div class="image_container mobile">
+            <img src="./Resources/images/information-campus-mobile.jpg">
           </div>
           <div class="text">
             <h3>Our campus</h3>
@@ -101,8 +109,11 @@ Need to add drop-down for sign-in
         </div>
 
         <div class="event grey-background">
-          <div class="image_container">
+          <div class="image_container mobile_hide">
             <img src="./Resources/images/information-guest-lecture.jpg">
+          </div>
+          <div class="image_container mobile">
+            <img src="./Resources/images/information-guest-lecture-mobile.jpg">
           </div>
           <div class="text">
             <h3>Our guest lecture</h3>
