Finished up mobile styling

--- a/index.html
+++ b/index.html
@@ -22,18 +22,27 @@
       </span>
     </div>
 
+    <div class="mobile">
+      <a href="#campus">
+        <img class="mobile" src="./Resources/images/ic-on-campus.svg">
+      </a>
+    </div>
+    <div class="mobile">
+      <a href="./online.html">
+        <img class="mobile" src="./Resources/images/ic-online.svg">
+      </a>
+    </div>
+    <div class="mobile">
+      <a href="#">
+        <img class="mobile" src="./Resources/images/ic-login.svg">
+      </a>
+    </div>
+
     <nav>
-      <span><a href="#campus">On Campus</a></span>
-      <span><a href="./online.html">Online</a></span>
-      <span><a href="./for_companies.html">For companies</a></span>
-      <span><a href="#">Sign in</a></span>
-
-      <!--
-
-Need to add drop-down for sign-in
-
--->
-
+      <span><a class="mobile_hide" href="#campus">On Campus</a></span>
+      <span><a class="mobile_hide" href="./online.html">Online</a></span>
+      <span><a class="mobile_hide" href="./for_companies.html">For companies</a></span>
+      <span><a class="mobile_hide" href="#">Sign in</a></span>
     </nav>
 
   </header>
@@ -71,7 +80,7 @@ Need to add drop-down for sign-in
 
         <div class="image_container">
           <img src="./Resources/images/information-main.jpg">
-         </div>
+        </div>
         <h1>It doesn't hurt to keep practicing</h1>
         <p class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec lacus ac nisl pulvinar dignissim at condimentum ipsum. Proin viverra aliquam lectus. Suspendisse ligula est, lacinia vel tempor ac, tincidunt lobortis nibh."</p>
         <p>Emanuel, Sr. Strategist at Hiring.com</p>
@@ -233,13 +242,13 @@ Need to add drop-down for sign-in
           <source src="./resources/videos/thesis.mp4">
         </video>
         </div>
-        <div class="text">
+        <div class="text mobile_hide">
           <h3>Reimagine urban</h3>
           <p class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec lacus ac nisl pulvinar dignissim at condimentum ipsum. Proin viverra aliquam lectus. Suspendisse ligula est, lacinia vel tempor ac, tincidunt lobortis nibh."</p>
 
         </div>
       </div>
-      <div class="right_side">
+      <div class="right_side mobile_hide">
 
         <div class="event grey-background">
           <div class="image_container">
@@ -272,8 +281,8 @@ Need to add drop-down for sign-in
       <span>©2016 Colmar Academy. All rights reserved</span>
     </div>
     <div>
-      <span>Terms</span>
-      <span>Privacy</span>
+      <span class="mobile_hide">Terms</span>
+      <span class="mobile_hide">Privacy</span>
     </div>
   </footer>
 
