Final final commit

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <section id="campus">
-    <div class="content wide">
+    <div class="content">
 
       <div class="left_side mobile_hide">
 
@@ -99,7 +99,7 @@
           <div class="text">
             <h3>Orientation date</h3>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p class="read_more"><a href="./read_more.html">Read more</a></p>
+            <p class="read_more"><a href="./read-more.html">Read more</a></p>
           </div>
         </div>
 
@@ -113,7 +113,7 @@
           <div class="text">
             <h3>Our campus</h3>
             <p>Find which campus is close by you</p>
-            <p class="read_more"><a href="./read_more.html">Read more</a></p>
+            <p class="read_more"><a href="./read-more.html">Read more</a></p>
           </div>
         </div>
 
@@ -127,7 +127,7 @@
           <div class="text">
             <h3>Our guest lecture</h3>
             <p>Join a keynote with Oliver Sacks about music in medical treatment</p>
-            <p class="read_more"><a href="./read_more.html">Read more</a></p>
+            <p class="read_more"><a href="./read-more.html">Read more</a></p>
           </div>
         </div>
 
